--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="stylesheet/main.css">
+    <title>Title of the document</title>
+  </head>
+
+  <body>
+    Hello World!
+  </body>
+
+
+</html>
